# openal-mixer

./: README.md
ALx/: CMakeLists.txt  LICENSE.txt
ALx/cmake/modules/: FindOpenAL.cmake
ALx/include/: alx.h
ALx/test/: Mixer.cpp
ALx/win32/: ALx.cpp
test/: CMakeLists.txt  Mixer.cpp
