CMAKE_MINIMUM_REQUIRED(VERSION 2.6.4)

PROJECT(ALx)

FIND_PACKAGE(OpenAL REQUIRED)

SET(STATIC_LIBRARY OFF CACHE BOOL
  "Indicates whether the OpenAL mixer library should be generated static or shared")

IF(WIN32)

  # Setup msvc
  IF(MSVC)

    SET(CMAKE_C_FLAGS "/MT /W3")
    SET(CMAKE_C_FLAGS_DEBUG "/MTd /Zi /Gm /GX /Od /GZ")
    SET(CMAKE_C_FLAGS_RELEASE "/MT /GX /O2")
    SET(CMAKE_C_FLAGS_MINSIZEREL "/MT /GX /O1")
    SET(CMAKE_C_FLAGS_RELWITHDEBINFO "/MT /Zi /GX /O2")

    SET(CMAKE_CXX_FLAGS "/MT /W3")
    SET(CMAKE_CXX_FLAGS_DEBUG "/MTd /Zi /Gm /GX /Od /GZ")
    SET(CMAKE_CXX_FLAGS_RELEASE "/MT /GX /O2")
    SET(CMAKE_CXX_FLAGS_MINSIZEREL "/MT /GX /O1")
    SET(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/MT /Zi /GX /O2")

    SET(CMAKE_EXE_LINKER_FLAGS "/machine:I386")
    SET(CMAKE_SHARED_LINKER_FLAGS "/dll /machine:I386")
    SET(CMAKE_MODULE_LINKER_FLAGS "/dll /machine:I386")

  ENDIF(MSVC)

  SET(ALX_SOURCES
    win32/ALx.cpp
    include/alx.h
  )

ENDIF(WIN32)

INCLUDE_DIRECTORIES(./include ${OPENAL_INCLUDE_DIR})

IF(STATIC_LIBRARY)
  ADD_DEFINITIONS(-DALX_STATIC_LIBRARY)
  ADD_LIBRARY(ALx STATIC ${ALX_SOURCES})
ELSE(STATIC_LIBRARY)
  ADD_LIBRARY(ALx SHARED ${ALX_SOURCES})
ENDIF(STATIC_LIBRARY)

TARGET_LINK_LIBRARIES(ALx ${OPENAL_LIBRARY})

# include tests.
ADD_SUBDIRECTORY(test)
